--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "3.5"
   - "3.6"
 install:
-  - pip install .
+  - pip install -U pytest
+  - pip install -e .
 script:
-  - echo "we should setup tests"
+  - pytest
