--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ python:
   - "2.7"
   - "3.5"
   - "3.6"
+  - "3.7"
+  - "nightly"
 install:
-  - pip install -U pytest
+  - pip install -r dev-requirements.txt
   - pip install -e .
 script:
-  - pytest
+  - pytest -vv --cov=vdom vdom/tests
