update how we do versioneer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
-# Example configuration for Black.
-
-# NOTE: you have to use single-quoted strings in TOML for regular expressions.
-# It's the equivalent of r-strings in Python.  Multiline strings are treated as
-# verbose regular expressions by Black.  Use [ ] to denote a significant space
-# character.
+[tool.versioneer]
+VCS = "git"
+style = "pep440"
+versionfile_source = "vdom/_version.py"
+tag_prefix = ""
+parentdir_prefix = "vdom-"
 
 [tool.black]
 line-length = 100
