--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,25 @@
+[metadata]
+name = vdom
+author = nteract contributors
+author_email = jupyter@googlegroups.com
+license = BSD
+description = VDOM for Python
+keywords = vdom,, html
+url = https://github.com/nteract/vdom
+long_description = file: README.md
+long_description_content_type = text/markdown
+
+[options]
+packages = vdom
+install_requires = ipython; jsonschema
+include_package_data = True
+
+[options.extras_require]
+tests = pytest
+all = pytest
+
+[options.package_data]
+vdom = schemas/vdom_schema_v0.json
 
 [flake8]
 # References:
@@ -7,6 +29,8 @@
 # Note: there cannot be spaces after comma's here
 exclude = __init__.py
 ignore =
+    # Length of line
+    E501,
     # Extra space in brackets
     E20,
     # Multiple spaces around ","
